--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
+#objects
 obj
 bin
 *.o
 *.d
-*.o~
+
+#autotools 
+aclocal.m4
+autom4te.cache
+config.log
+config.status
+config.sub
+configure
+aux-dist
+config.h
+Makefile
+Makefile.in
+.deps
