--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,10 @@
 AC_PREREQ([2.68])
 AC_INIT([hellocpp11], [0.1], [michal.harish@gmail.com])
+AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_AUX_DIR(aux-dist)
 #AC_CONFIG_HEADERS([config.h])
 
-AM_INIT_AUTOMAKE([1.11 -Wall -Werror])
+AM_INIT_AUTOMAKE([1.11 subdir-objects -Wall -Werror])
 AC_CONFIG_FILES([Makefile]) 
 
 AC_PROG_CXX #require c++ 
